Cambios en el documento 2
Hay una referencia que todavia no me queda, no se que rayos le pasa....
tal vez no eh aprendido bien a poner las referencias, mejor mañana me
ayudan asi en persona para ver ya bien :/

--- a/TT-2016-B045/archivosTex/introduccion.tex
+++ b/TT-2016-B045/archivosTex/introduccion.tex
@@ -15,17 +15,32 @@ El cómputo nube es un término general utilizado para nombrar así a la provisi
 
 \section{Problemática}
 Hoy en día el manejo de información en la sociedad juega un papel importante en el desarrollo de las actividades que la conforman. Millones de personas en el mundo tienen la facilidad de acceder a un dispositivo electrónico que les permite manipular esta información o almacenarla para posteriormente darle un uso específico. La información que circula en dispositivos electrónicos es mayor a la memoria disponible que ofrecen estos, a medida que el volumen de información aumenta, también lo hace la demanda para los servicios de almacenamiento en línea ~\cite{Bellare}. Un gran incremento en el uso de estos servicios implica tener más infraestructura y personal para que los sistemas de almacenamiento tengan más capacidad y puedan cubrir la demanda que se presenta en el mercado. Si bien el almacenamiento logró dar buenos resultados al cliente en sus primeras etapas, ahora la preocupación por el incremento de infraestructura para seguir dando esos resultados se ha incrementado considerablemente  ~\cite{Keelveedhi}.
-
-Una de las principales razones del incremento en el tamaño en la estructura de almacenamiento de servicios en linea, es la duplicación de archivos por varios y diferentes usuarios, por ejemplo \textbf{\textit{n}} usuarios pueden subir la misma canción, por lo tanto esta se encuentra almacenada en las \textbf{\textit{n}} cuentas de la nube, lo cuál implica un gasto innecesario de almacenamiento. Según un estudio ~\cite{popa} realizado por HP se estima que hay 1 Exabyte de datos almacenados en la nube, además de 2012 a 2017, las cargas de trabajo de los centros de datos crecerán 2,3 veces, mientras que en la nube aumentarán 3,7 veces, lo cual implica que el Exabyte que se estima se podría llegar a triplicar y las empresas que proporcionan estos servicios disminuyen su oferta en el mercado. 
-
-Sumado al agraviante problema de crecimiento en la estructura de almacenamiento en línea, existe un elemento que pocas organizaciones y usuarios contemplan para el almacenamiento de su información, y es la seguridad. Las plataformas que ahora ofrecen el servicio de almacenamiento en la nube, no contemplan la protección e integridad de la información, este servicio está sujeto a los ataques de adversarios que están interesados en el robo, manipulación o alteración de la información importante para los usuarios. Dicho servicio carece de algún esquema de seguridad y por tanto no se puede garantizar la permanencia de los usuarios en la plataforma de almacenamiento. 
-Dejar sin resolver la seguridad de la infofrmación, puede generar negativas consecuenicias hacia cualquier usuario de la plataforma de almacencamiento, cualquier individuo que tenga acceso a los archivos almacenados en ésta plataforma, podrá visualizar el contenido de estos, comprometiendo la fidelidad e integridad de la información para poder usarla en situaciones que pudieran llegar a perjudicar al usuario. 
+\\
+El cambio en las estrategias de negocio y la explosión de datos digitales se ha lanzado enormes demandas de alto volumen y almacenamiento de datos eficiente. Debido a los limitados recursos financieros y altos gastos de almacenamiento de datos electrónicos, los usuarios prefieren almacenar sus datos en los entornos de nube, el almacenamiento en la nube permite a sus usuarios transferir sus datos y aplicaciones en la web para que puedan operar esos programas sin ninguna infraestructura física necesaria. Hay recursos limitados de almacenamiento y de red en el sistema de nube. La totalidad de los servicios en la nube que se han ofrecido hasta ahora, permite a los usuarios detener los problemas mediante el uso de los dos aspectos importantes de la fiabilidad y elasticidad ~\cite{Keelveedhi}.
 \\ \\
-Existen soluciones para cada uno de los problemas, una de ellas consiste en encontrar y eliminar la duplicación dentro de los datos sin comprometer su integridad o la fidelidad. El objetivo es almacenar más datos en menos espacio mediante la segmentación de los archivos en pequeños trozos de tamaño variable\textit{(32 a 128 KB)}, la identificación de fragmentos duplicados, manteniendo una sola copia de cada trozo. Las copias repetidas del trozo se sustituyen por una referencia a la única copia. Los trozos se comprimen y luego son organizados en contenedores especiales de archivos en la carpeta Información del volumen del sistema. Para garantizar la privacidad de los datos obtenidos después del proceso de eliminación de duplicación, es posible utilizar algoritmos criptográficos ~\cite{microsoft}.
+Una de las principales razones del incremento en el tamaño en la estructura de almacenamiento de servicios en linea es la duplicación de archivos por varios y diferentes usuarios, existen muchas copias en la nube de un mismo archivo que se encuentra presente en diferentes cuentas de usuarios. Por ejemplo \textbf{\textit{n}}cantidad de  usuarios pueden subir la misma canción a la nube, por lo tanto esta se encuentra almacenada en las \textbf{\textit{n}} cantidad de cuentas que tiene registro la nube, esta misma canción que se encuentra almacenada está cubriendo un espacio en la memoria del servicio, si se tuviera una sóla copia almacenada de esta canción se ahorraría mucho espacio en la nube que podría utilizarse para el aalmacenamiento de un archivo diferente . Según un estudio ~\cite{popa} realizado por HP se estima que hay 1 Exabyte de datos almacenados en la nube, además de 2012 a 2017, las cargas de trabajo de los centros de datos crecerán 2.3 veces, mientras que en la nube aumentarán 3.7 veces, lo cual implica que el Exabyte que se estima se podría llegar a triplicar y las empresas que proporcionan estos servicios disminuyen su oferta en el mercado. 
+\\ \\ 
+Sumado al agraviante problema de crecimiento en la estructura de almacenamiento en línea, existe un elemento que pocas organizaciones y usuarios contemplan para el almacenamiento de su información, y es la seguridad. Las plataformas que ahora ofrecen el servicio de almacenamiento en la nube, no contemplan la protección e integridad de la información, este servicio está sujeto a los ataques de adversarios que están interesados en el robo, manipulación o alteración de la información importante para los usuarios. Dicho servicio carece de algún esquema de seguridad y por tanto no se puede garantizar la permanencia de los usuarios en el consumo del servicio en la plataforma de almacenamiento. 
+Dejar sin resolver la seguridad de la infofrmación, puede generar negativas consecuenicias hacia cualquier usuario de la plataforma de almacencamiento, cualquier individuo que tenga acceso a los archivos almacenados en ésta plataforma, podrá visualizar el contenido de estos, comprometiendo la fidelidad e integridad de la información para poder usarla en situaciones que pudieran llegar a perjudicar al usuario. 
+\\
+
+\section{Solución propuesta}
+La eliminación de duplicación de datos es una experiencia progresiva que puede disminuir drásticamente la cantidad de información de respaldo almacenada eliminando todos los datos redundantes como se ilustra en la figura ~\ref{fig:1-3-1}. Al evitar la duplicación de datos explota el consumo de almacenamiento mientras que permite a las tecnologías de información recuperar más datos de respaldo de líneas cercanas durante más tiempo. Esto recupera enormemente la capacidad del disco de copia de seguridad establecida, alterando la forma en que los datos están protegidos. En general,
+la eliminación de duplicados compara la información nueva con la información actual de los trabajos anteriores de copia de seguridad o archivado y elimina las redundancias en la nube reduciendo la asignación de almacenamiento dentro de esta, puede reducir las necesidades de almacenamiento en hasta un \textit{80\%} para archivos y copias de seguridad que los usuarios resguardan en la nube. Las ventajas de no tener duplicados en la nube incluyen una mayor capacidad de almacenamiento y ahorro presupuestario, al igual que la minimización del ancho de banda para menos costosa y más rápida la repetición de la información fuera de la reserva simplificando y mejorando la gestión del almacenamiento de datos  ~\cite{rededup}. 
+
+
+\begin{figure}[H]
+\centering
+	\includegraphics[width=10cm, height=5cm]{./images/Deduplicacion.jpg}
+	\caption{Solución Propuesta}
+	\label{fig:1-3-1}
+\end{figure}
+
+El objetivo es almacenar más datos en menos espacio mediante la segmentación de los archivos en pequeños trozos de tamaño variable\textit{(32 a 128 KB)}, la identificación de fragmentos duplicados, manteniendo una sola copia de cada trozo. Las copias repetidas del trozo se sustituyen por una referencia a la única copia. Los trozos se comprimen y luego son organizados en contenedores especiales de archivos en la carpeta Información del volumen del sistema. Para garantizar la privacidad de los datos obtenidos después del proceso de eliminación de duplicación, es posible utilizar algoritmos criptográficos ~\cite{microsoft}.
 \\ \\ 
 Una posible solución para la protección a los datos y eliminar duplicaciones de estos, es echar mano de la criptografía. Ciencia que se encarga del estudio de técnicas para transformar la información a una forma que no pueda entenderse a simple vista; sin embargo, el objetivo de la Criptografía no es sólo mantener los datos secretos, sino también protegerlos contra modificación o manipulación y comprobar la fuente de los mismos ~\cite{fundamentos}. 
-\\
-Está ciencia que matiene la información segura se encuentra dividida en dos grandes tipos: \textbf{Criptográfia simétrica} y la \textbf{Criptografía asimétrica}. 
+\\  \\
+Está ciencia que matiene la información segura se encuentra dividida en dos grandes tipos: \textbf{Criptográfia simétrica} y la \textbf{Criptografía asimétrica}.  
 
 \begin{itemize} 
    \item \textit{La criptografía simétrica} o también llamada criptografía de llave privada, basa su seguridad en una sóla llave que se comparte entre dos usuarios que quieren compartir información, dicha llave es utilizada para cifrar un archivo al ser enviado al otro usuario y este utilizará la misma llave para descifrarlo cuando lo reciba. 
@@ -35,7 +50,6 @@ Está ciencia que matiene la información segura se encuentra dividida en dos gr
 Puesto que ambas cuestiones, la eliminación de duplicados y la privacidad de la información, son importantes, se ha comenzado a
 proponer mecanismos que solucionen ambos problemas de manera conjunta, que son: Dupless ~\cite{Bellare}, ABS: the apportioned backup
 system. ~\cite{abs}, Flud Backup ~\cite{flud}, SIGOPS Oper. Syst. ~\cite{sigops}, TahoeFS ~\cite{tahoe}.
-
 
 \section{Justificación}
 
