--- a/TT-2016-B045/bibliografia.bib
+++ b/TT-2016-B045/bibliografia.bib
@@ -39,6 +39,22 @@
   year      = {2013},
 }
 
+@article{dedup,
+  author    = {Fatemeh Shieh and Mostafa Ghobaei Arani and Mahboubeh Shamsi},
+  title     = {De-duplication Approaches in Cloud Computing Environment: A Survey },
+  journal   = {International Journal of Computer Applications},
+  year      = {2015},
+  url       = {http://research.ijcaonline.org/volume120/number13/pxc3904233.pdf},
+}
+
+@article{rededup,
+  author    = {Rohini Sharma},
+  title     = {DATA DE-DUPLICATION IN CLOUD COMPUTING: A REVIEW},
+  journal   = {International Journal of Engineering Applied Sciences and Technology, 2017 },
+  year      = {2017},
+  url       = {http://www.ijeast.com/papers/26-29,Tesma204,IJEAST.pdf},
+}
+
 @misc{popa,
    author = {HP, POPA},
    title = "Estadísticas que todos deberían conocer sobre cloud computing",
@@ -71,7 +87,7 @@ estadisticas-que-todos-los-cios-deberian-conocer-sobre-cloud-computing.}}
  }
 
 @misc{flud,
-   author = {s/a},
+   author = {S/A},
    title = "Flud Backup",
    year = "2011",
    note = {\url{ http://flud.org/wiki/Flud_Backup.}}
